# yew-starter

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package-lock.json  package.json
src/: app.rs  lib.rs
